Details
-
Bug
-
Status: Closed (View Workflow)
-
Major
-
Resolution: Fixed
-
10.4(EOL)
-
None
Description
galera_3nodes_sr.GCF-336 'innodb' w4 [ fail ]
|
Test ended at 2022-10-26 08:36:35
|
|
|
CURRENT_TEST: galera_3nodes_sr.GCF-336
|
mysqltest: At line 29: query 'COMMIT' succeeded - should have failed with errno 1047...
|
|
|
The result from queries just before the failure was:
|
< snip >
|
connect node_2a, 127.0.0.1, root, , test, $NODE_MYPORT_2;
|
connection node_2a;
|
SELECT COUNT(*) > 0 FROM mysql.wsrep_streaming_log;
|
COUNT(*) > 0
|
1
|
connection node_1;
|
SELECT COUNT(*) > 0 FROM mysql.wsrep_streaming_log;
|
COUNT(*) > 0
|
1
|
SET TRANSACTION ISOLATION LEVEL READ UNCOMMITTED;
|
SELECT COUNT(*) > 0 FROM t1;
|
COUNT(*) > 0
|
1
|
connection node_2a;
|
SET GLOBAL wsrep_provider_options = 'gmcast.isolate=1';
|
SET SESSION wsrep_sync_wait=0;
|
connection node_2;
|
INSERT INTO t1 VALUES (2);
|
ERROR 40001: Deadlock found when trying to get lock; try restarting transaction
|
COMMIT;
|
|
|
More results from queries before failure can be found in /home/jan/mysql/10.4/mysql-test/var/4/log/GCF-336.log
|
|
|
Warnings from just before the error:
|
Error 1030 Got error 1213 "Unknown error 1213" from storage engine InnoDB
|
Attachments
Issue Links
- relates to
-
MDEV-34071 Failure during the galera_3nodes_sr.GCF-336 test
-
- Closed
-